Modificaciones de centrado, animaciones, integro de registro e imagen de usuario

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="img/icono.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +16,7 @@
     <form action="" class="form-box">
         <div>
             <div class="title">
+                <img src="img/usuario.png" alt="usuario">
                 <h1>¡Bienvenid@!</h1>
             </div>
             <div class="datos">
@@ -24,6 +26,9 @@
             </div>
             <div class="boton">
                 <a href="index.html"><button>Iniciar Sesión</button></a>
+            </div>
+            <div class="registro">
+                <a href=""><p>¿No tienes una cuenta? Regístrate</p></a>
             </div>
         </div>
     </form>
