--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <h1>¡Bienvenid@!</h1>
             </div>
             <div class="datos">
-                <input type="text" name="" id="" placeholder="Email o nombre de usuario">
+                <input type="text" name="" id="" placeholder="Email o nombre de usuario" required>
                 <br>
-                <input type="text" name="" id="" placeholder="Contraseña">
+                <input type="password" name="" id="" placeholder="Contraseña" required >
             </div>
             <div class="boton">
                 <a href="index.html"><button>Iniciar Sesión</button></a>
             </div>
             <div class="registro">
-                <a href=""><p>¿No tienes una cuenta? Regístrate</p></a>
+                <a href="registro.html"><p>¿No tienes una cuenta? Regístrate</p></a>
             </div>
         </div>
     </form>
