--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="img/icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/usuario.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
