--- a/registro.html
+++ b/registro.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registro</title>
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="img/icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/usuario.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
